feat: implement infinite scroll for YouTube video gallery using TanStack Query

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.66.9",
     "next": "15.1.4",
     "next-nprogress-bar": "^2.4.3",
     "react": "^19.0.0",
