--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
     "tailwind-scrollbar-hide": "^2.0.0",
-    "three": "^0.173.0"
+    "three": "^0.173.0",
+    "tone": "^15.1.16"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
